fix text size on tag on mobile

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -26,7 +26,7 @@
             font-size: 10px;
             font-weight: $bold;
 
-            @include mq(phone) {
+            @include mq(tablet) {
                 font-size: 14px;
             }
         }
